fix bar, fix alignment for last div

--- a/Alpha/css/style.css
+++ b/Alpha/css/style.css
@@ -82,7 +82,7 @@ p#welcomeText {
 div#navigationBar {
   width: 100%;
   height: 50px;
-  box-shadow: 1px 2px 5px #000000;
+  /*box-shadow: 1px 2px 5px #000000;*/
   background: url(../img/top-bar.png) no-repeat center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
